@@ -1,1 +1,5 @@
 SUBDIRS = datrie tools doc
+
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = datrie.pc
+
